--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -22,17 +22,17 @@ layout: default
                 <article class="article-content markdown-body">
                     {{ content }}
                 </article>
-                <div class="share">
+                <!-- <div class="share">
                     {% include sns-share.html %}
                 </div>
                 <div class="comment">
                     {% include comments.html %}
-                </div>
+                </div> -->
             </div>
             <div class="column one-third">
                 {% include sidebar-search.html %}
                 {% include sidebar-qrcode.html %}
-                {% include sidebar-popular-repo.html %}
+                <!-- {% include sidebar-popular-repo.html %} -->
             </div>
         </div>
     </section>
